<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/username"
        android:hint="@string/username_hint"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/edit_bg"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/password_hint"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/edit_bg"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/login_tips"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_marginTop="15dp"
        android:text="@string/login_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/login_button"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/login_button"/>

<!--    <Button-->
<!--        android:id="@+id/login_button"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:background="@color/theme"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:text="@string/login_button"/>-->

</LinearLayout>